--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -28,7 +28,6 @@
 <script type="text/javascript" src="../../js/scrollspy.js"></script>
 <script type="text/javascript" src="../../js/alert.js"></script>
 <script type="text/javascript" src="../../js/lazy.js"></script>
-<script type="text/javascript" src="../../js/slider.js"></script>
 <script type="text/javascript" src="../../js/equalize.js"></script>
 <script type="text/javascript" src="../../js/common.js"></script>
 
@@ -137,10 +136,6 @@ $(window).ready(function() {
     }
 }
 
-.slider-sample .slider {
-    width: 200px;
-}
-
 .well {
   min-height: 20px;
   padding: 19px;
@@ -164,7 +159,7 @@ $(window).ready(function() {
 </head>
 <body data-cfw="scrollspy" data-cfw-scrollspy-target=".sidebar">
 <header>
-    <div class="navbar bg-dark mb-1">
+    <div class="navbar bg-dark text-light mb-1">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
@@ -183,7 +178,6 @@ $(window).ready(function() {
             <div class="sidebar">
                 <nav>
                     <ul class="nav nav-vertical sidenav">
-                        <li class="nav-item"><a href="#slider" class="nav-link">Slider</a></li>
                         <li class="nav-item"><a href="#button" class="nav-link">Button</a></li>
                         <li class="nav-item"><a href="#alert" class="nav-link">Alert</a></li>
                         <li class="nav-item"><a href="#slideshow" class="nav-link">Slideshow</a></li>
@@ -204,152 +198,6 @@ $(window).ready(function() {
         </div>
 
         <div class="col-md-9 col-sm-12">
-
-            <h2 id="slider">Slider:</h2>
-
-            <strong>Range Slider</strong>
-            <div class="slider-sample">
-                <form class="form-inline">
-                    <div id="sliderRange0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
-                        <div class="form-group">
-                            <label id="sliderRange0_0_Label" for="sliderRange0_0" class="me-0_25">Value</label>
-                            <input id="sliderRange0_0" type="range">
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <strong>Custom Range Slider</strong>
-            <div class="slider-sample">
-                <form class="form-inline">
-                    <div id="sliderRange0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
-                        <div class="form-group">
-                            <label id="sliderRange0_0_Label" for="sliderRange0_0" class="me-0_25">Value</label>
-                            <input id="sliderRange0_0" type="range" class="custom-range">
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <strong>Single Slider:</strong>
-            <div class="slider-sample">
-                <form class="form-inline">
-                    <div id="slider0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
-                        <div class="form-group">
-                            <label id="slider0_0_Label" for="slider0_0" class="me-0_25">Value</label>
-                            <input id="slider0_0" type="text" class="form-control" value="50" />
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <!--
-            <script type="text/javascript">
-            $('#slider0').CFW_Slider({
-                min : 0,
-                max : 100,
-                step : 1
-            });
-            </script>
-            -->
-
-            <strong>Double Slider</strong>
-            <div class="slider-sample">
-                <form class="form-inline">
-                    <div id="slider1" class="d-flex flex-items-center">
-                        <div class="form-group me-0_25">
-                            <label id="slider1_0_Label" for="slider1_0" class="me-0_25">Min</label>
-                            <input id="slider1_0" type="text" class="form-control" value="-25" />
-                        </div>
-                        <div class="form-group">
-                            <input id="slider1_1" type="text" class="form-control" value="25" />
-                            <label id="slider1_1_Label" for="slider1_1" class="ms-0_25">Max</label>
-                        </div>
-                    </div>
-                </form>
-
-            </div>
-            <script type="text/javascript">
-            $('#slider1').CFW_Slider({
-                min : -50,
-                max : 50,
-                step : 5
-            });
-            </script>
-
-            <strong>Double Select Slider</strong>
-            <div class="slider-sample">
-                <form class="form-inline">
-                    <div id="slider2" class="d-flex flex-items-center">
-                        <div class="form-group me-0_25">
-                            <label id="slider2_0_Label" for="slider2_0" class="me-0_25">Start</label>
-                            <select id="slider2_0" class="form-control">
-                                <option value="12:00 am">12:00 am</option>
-                                <option value="1:00 am">1:00 am</option>
-                                <option value="2:00 am">2:00 am</option>
-                                <option value="3:00 am">3:00 am</option>
-                                <option value="4:00 am">4:00 am</option>
-                                <option value="5:00 am" selected>5:00 am</option>
-                                <option value="6:00 am">6:00 am</option>
-                                <option value="7:00 am">7:00 am</option>
-                                <option value="8:00 am">8:00 am</option>
-                                <option value="9:00 am">9:00 am</option>
-                                <option value="10:00 am">10:00 am</option>
-                                <option value="11:00 am">11:00 am</option>
-                                <option value="12:00 pm">12:00 pm</option>
-                                <option value="1:00 pm">1:00 pm</option>
-                                <option value="2:00 pm">2:00 pm</option>
-                                <option value="3:00 pm">3:00 pm</option>
-                                <option value="4:00 pm">4:00 pm</option>
-                                <option value="5:00 pm">5:00 pm</option>
-                                <option value="6:00 pm">6:00 pm</option>
-                                <option value="7:00 pm">7:00 pm</option>
-                                <option value="8:00 pm">8:00 pm</option>
-                                <option value="9:00 pm">9:00 pm</option>
-                                <option value="10:00 pm">10:00 pm</option>
-                                <option value="11:00 pm">11:00 pm</option>
-                                <option value="12:00 am">12:00 am</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <select id="slider2_1" class="form-control">
-                                <option value="12:00 am">12:00 am</option>
-                                <option value="1:00 am">1:00 am</option>
-                                <option value="2:00 am">2:00 am</option>
-                                <option value="3:00 am">3:00 am</option>
-                                <option value="4:00 am">4:00 am</option>
-                                <option value="5:00 am">5:00 am</option>
-                                <option value="6:00 am">6:00 am</option>
-                                <option value="7:00 am">7:00 am</option>
-                                <option value="8:00 am">8:00 am</option>
-                                <option value="9:00 am">9:00 am</option>
-                                <option value="10:00 am">10:00 am</option>
-                                <option value="11:00 am">11:00 am</option>
-                                <option value="12:00 pm" selected>12:00 pm</option>
-                                <option value="1:00 pm">1:00 pm</option>
-                                <option value="2:00 pm">2:00 pm</option>
-                                <option value="3:00 pm">3:00 pm</option>
-                                <option value="4:00 pm">4:00 pm</option>
-                                <option value="5:00 pm">5:00 pm</option>
-                                <option value="6:00 pm">6:00 pm</option>
-                                <option value="7:00 pm">7:00 pm</option>
-                                <option value="8:00 pm">8:00 pm</option>
-                                <option value="9:00 pm">9:00 pm</option>
-                                <option value="10:00 pm">10:00 pm</option>
-                                <option value="11:00 pm">11:00 pm</option>
-                                <option value="12:00 am">12:00 am</option>
-                            </select>
-                            <label id="slider2_1_Label" for="slider2_1" class="ms-0_25">End</label>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <script type="text/javascript">
-            $('#slider2').CFW_Slider({
-                min : 0,
-                max : 24,
-                step : 1
-                //enabled : false
-            });
-            </script>
 
             <h2 id="button">Button:</h2>
 
