--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -13,7 +13,6 @@
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
 <script type="text/javascript" src="../../js/dropdown.js"></script>
-<script type="text/javascript" src="../../js/slider.js"></script>
 <script type="text/javascript" src="../../js/player.js"></script>
 <script type="text/javascript" src="../../js/common.js"></script>
 
@@ -100,7 +99,6 @@ body {
 .player-seek label {
     display: none;
 }
-.player-seek .slider.slider-horizontal,
 .player-seek input[type="range"] {
     width: 100px;
     min-width: 100px;
@@ -132,7 +130,6 @@ body {
 .player-volume label {
     display: none;
 }
-.player-volume .slider.slider-horizontal,
 .player-volume input[type="range"] {
     width: 80px;
     min-width: 80px;
@@ -464,7 +461,7 @@ body {
         <span class="player-time" data-cfw-player="time">
             <span class="player-time-current" data-cfw-player="time-current"></span>
             <span class="player-seek" data-cfw-player="seek">
-            	<label>Seek slider<input type="text" /></label>
+                <input type="range" class="custom-range" aria-label="Seek">
             </span>
             <span class="player-time-duration" data-cfw-player="time-duration"></span>
         </span>
@@ -473,7 +470,7 @@ body {
             <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
         </span>
         <span class="player-volume" data-cfw-player="volume">
-            <label>Volume slider<input type="text" /></label>
+            <input type="range" class="custom-range" aria-label="Volume">
         </span>
         <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
     </div>
@@ -505,7 +502,7 @@ body {
             <span class="player-time" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek" data-cfw-player="seek">
-                	<label>Seek slider<input type="text" /></label>
+                	<input type="range" class="custom-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -514,7 +511,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume" data-cfw-player="volume">
-                <label>Volume slider<input type="text" /></label>
+                <input type="range" class="custom-range" aria-label="Volume">
             </span>
             <div class="dropup dropleft" style="display: inline-block; position: relative;">
                 <button type="button" class="btn btn-icon player-speed" data-cfw="dropdown" data-cfw-dropdown-target="#speed0" title="Playback speed" aria-label="Playback speed"><span class="fas fa-fw fa-sort"></span></button>
@@ -557,7 +554,7 @@ body {
             <span class="player-time" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek" data-cfw-player="seek">
-                	<label>Seek slider<input type="text" /></label>
+                	<input type="range" class="custom-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -567,7 +564,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume" data-cfw-player="volume">
-                <label>Volume slider<input type="text" /></label>
+                <input type="range" class="custom-range" aria-label="Volume">
             </span>
             <!-- <button type="button" class="btn btn-icon player-speed" data-cfw-player="speed" title="Playback speed" aria-label="Playback speed"><span class="fas fa-fw fa-sort"></span></button> -->
             <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
@@ -602,7 +599,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<label>Seek slider<input type="text" /></label>
+                        <input type="range" class="custom-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -612,7 +609,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <label>Volume slider<input type="text" /></label>
+                    <input type="range" class="custom-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -646,7 +643,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<label>Seek slider<input type="text" /></label>
+                    	<input type="range" class="custom-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -655,7 +652,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <label>Volume slider<input type="text" /></label>
+                    <input type="range" class="custom-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -691,7 +688,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<label>Seek slider<input type="text" /></label>
+                    	<input type="range" class="custom-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -701,7 +698,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <label>Volume slider<input type="text" /></label>
+                    <input type="range" class="custom-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -737,7 +734,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<label>Seek slider<input type="text" /></label>
+                    	<input type="range" class="custom-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -747,7 +744,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <label>Volume slider<input type="text" /></label>
+                    <input type="range" class="custom-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -792,7 +789,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<label>Seek slider<input type="text" /></label>
+                    	<input type="range" class="custom-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -801,7 +798,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <label>Volume slider<input type="text" /></label>
+                    <input type="range" class="custom-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -838,7 +835,7 @@ body {
                 <span class="player-time" data-cfw-player="time">
                     <span class="player-time-current" data-cfw-player="time-current"></span>
                     <span class="player-seek" data-cfw-player="seek">
-                    	<label>Seek slider<input type="text" /></label>
+                    	<input type="range" class="custom-range" aria-label="Seek">
                     </span>
                     <span class="player-time-duration" data-cfw-player="time-duration"></span>
                 </span>
@@ -848,7 +845,7 @@ body {
                     <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
                 </span>
                 <span class="player-volume" data-cfw-player="volume">
-                    <label>Volume slider<input type="text" /></label>
+                    <input type="range" class="custom-range" aria-label="Volume">
                 </span>
                 <button type="button" class="btn btn-icon" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
                 <button type="button" class="btn btn-icon" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
@@ -881,8 +878,7 @@ body {
             <span class="player-time me-0_25" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek form-inline" data-cfw-player="seek">
-                	<label for="rangeSeek0">Seek slider</label>
-                	<input type="range" id="rangeSeek0" class="custom-range">
+                	<input type="range" class="custom-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -892,8 +888,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume form-inline me-0_25" data-cfw-player="volume">
-                <label for="rangeVol0">Seek slider</label>
-                <input type="range" id="rangeVol0" class="custom-range">
+                <input type="range" class="custom-range" aria-label="Volume">
             </span>
             <button type="button" class="btn btn-icon me-0_25" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
             <button type="button" class="btn btn-icon me-0_25" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
