--- a/site/index.html
+++ b/site/index.html
@@ -85,7 +85,7 @@ layout: home
         <div class="col-md-6">
             <h2>Get Started Now</h2>
             <p>Quickly get up and running with Figuration by including the compiled CSS and JavaScript in your document. Add the following CDN links in the <code>&lt;head&gt;</code> of your HTML document.</p>
-            <p>More information is available on the <a href="{{ site.baseurl }}/{{ site.docs_version }}/get-started/quick-start/">Quick Start page</a>.</p>
+            <p>More information is available on the <a href="{{ site.baseurl }}/{{ site.version.path }}/get-started/quick-start/">Quick Start page</a>.</p>
         </div>
         <div class="col-md-6 home-feature">
             {%- include ./syntax/home_quickstart.md %}
@@ -116,7 +116,7 @@ layout: home
     <div class="row text-center text-md-start">
         <div class="col-sm-6 col-lg-4">
             <h2>Browser Support</h2>
-            <p>Most current browers are supported.  Additional details can be found on the <a href="{{ site.baseurl }}/{{ site.docs_version }}/get-started/browsers-devices/">Browsers &amp; Devices page</a>.</p>
+            <p>Most current browers are supported.  Additional details can be found on the <a href="{{ site.path }}/{{ site.version.path }}/get-started/browsers-devices/">Browsers &amp; Devices page</a>.</p>
         </div>
         <div class="col-sm-6 col-lg-8 home-feature">
             <ul class="list list-horizontal flex-wrap flex-center text-center small">
