--- a/site/404.html
+++ b/site/404.html
@@ -1,13 +1,17 @@
 ---
+layout: home
+title: File Not Found
 permalink: "{{ site.path }}/404.html"
 sitemapIgnore: true
 ---
-<!doctype html>
-<html>
-<head>
-<title>Page title</title>
-</head>
-<body>
-<p>404 placeholder page</p>
-</body>
-</html>
+
+<div class="container text-center my-2">
+    <h1>File Not Found</h1>
+    <p>Sorry but the item you are seeking may have been moved or deleted.</p>
+    <p class="font-weight-sbold">We have recently overhauled the site layout for the Figuration documentation.</p>
+    <p>Try going to our home page, or use the global navigation at the top of the page.</p>
+    <p>
+        <a href="{{ site.baseurl }}/" class="fs-large font-weight-bold"><span class="fas fa-home" aria-hidden="true"></span> Go to Figuration's home page!</a>
+    </p>
+</div>
+
