--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@ layout: home
 
                 <div class="row text-center text-md-start">
                     <div class="col-md-auto">
-                        <a href="{{ site.path }}{{ site.version.path }}/get-started/download/" class="btn btn-lg btn-start" onclick="ga('send', 'event', 'Homepage', 'Download', 'Download {{ site.version.current }}');">Download</a>
+                        <a href="{{ site.path }}/{{ site.version.docs }}/get-started/download/" class="btn btn-lg btn-start" onclick="ga('send', 'event', 'Homepage', 'Download', 'Download {{ site.version.current }}');">Download</a>
                     </div>
                     <!--<div class="w-100 d-md-none"></div> -->
                     <div class="col-md-auto">
@@ -85,7 +85,7 @@ layout: home
         <div class="col-md-6">
             <h2>Get Started Now</h2>
             <p>Quickly get up and running with Figuration by including the compiled CSS and JavaScript in your document. Add the following CDN links in the <code>&lt;head&gt;</code> of your HTML document.</p>
-            <p>More information is available on the <a href="{{ site.path }}{{ site.version.path }}/get-started/quick-start/">Quick Start page</a>.</p>
+            <p>More information is available on the <a href="{{ site.path }}/{{ site.version.docs }}/get-started/quick-start/">Quick Start page</a>.</p>
         </div>
         <div class="col-md-6 home-feature">
 {% capture example %}
